# fund_rate_Arb

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  settings.example.yaml  settings.yaml
deploy/: fund-rate-scan.service  install.sh  setup.sh  systemd.service
doc/archives/: cash-carry_arb_plan_abfd34c0.plan.md  funding-rate-arbitrage-implementation-v2.md  funding-rate-arbitrage-implementation-v3.md
doc/plans/: 2026-05-29-funding-carry-gap-fixes.md  apy-signal-mvp-plan.md  funding-rate-arbitrage-implementation-spec.md  funding-rate-arbitrage-plan.md
docker/: Dockerfile  docker-compose.yml
docs/plans/: 2026-05-28-binance-funding-carry-strategy.md
fund_rate_tg/: .env.example  pyproject.toml
fund_rate_tg/src/fund_rate_tg/: __init__.py  config.py  formatter.py  models.py  sender.py
fund_rate_tg/tests/: test_formatter.py  test_sender.py
investigation/: list_binance_futures_stocks.py
reports/: funding-report-latest.md  signals-latest.txt
skills/funding-arb/: SKILL.md
src/fund_rate_arb/: __init__.py  config.py  db.py  main.py
src/fund_rate_arb/cli/: __init__.py  main.py  report.py
src/fund_rate_arb/collectors/: __init__.py  base.py  binance.py  binance_alpha.py  binance_spot.py  classic_futures.py  hyperliquid.py  portfolio_margin.py
src/fund_rate_arb/data/: __init__.py  alpha_prices.py  monitors.py  payments.py  retriever.py
src/fund_rate_arb/events/: __init__.py  bus.py
src/fund_rate_arb/execution/: allocator.py  live.py  paper.py
src/fund_rate_arb/models/: __init__.py  funding.py
src/fund_rate_arb/risk/: __init__.py  exit_engine.py
src/fund_rate_arb/scoring/: __init__.py  fee_model.py  persistence.py  quality_score.py
src/fund_rate_arb/signal/: __init__.py  detector.py  scheduler.py
src/fund_rate_arb/strategies/: __init__.py  base.py  config.py  funding_carry.py
src/fund_rate_arb/tg/: config.py  formatter.py  models.py  sender.py
src/fund_rate_arb/trading/: __init__.py  engine.py
tests/: conftest.py  test_binance_live.py  test_db.py  test_e2e_dryrun.py  test_models.py  test_phase1.py  test_portfolio_margin.py  test_scan_integration.py  test_scoring.py
tests/collectors/: test_classic_futures.py
tests/execution/: test_allocator.py  test_live.py  test_paper.py
tests/risk/: test_exit_engine.py
tests/signal/: test_detector.py
tests/strategies/: test_funding_carry.py
tests/trading/: test_engine.py
