[project]
name = "fund-rate-arb"
version = "0.1.0"
description = "Funding rate arbitrage signal detector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.5.55",
    "click>=8.4.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
fund-rate-arb = "fund_rate_arb.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
